2012-03-27  Eric Botcazou  <ebotcazou@adacore.com>

	* expmed.c (store_bit_field): Assert that BITREGION_START is a multiple
	of a unit before computing the offset in units.
	* expr.c (get_bit_range): Return the null range if the enclosing record
	is part of a larger bit field.

2012-03-27  Tristan Gingold  <gingold@adacore.com>

	* config/ia64/vms.h (CASE_VECTOR_MODE): Define.
	* config/ia64/ia64.md: Remove mode in template.
	Sign extend operand in expand_simple_binop.
	* config/ia64/ia64.h (ASM_OUTPUT_ADDR_DIFF_ELT): Use
	CASE_VECTOR_MODE instead of TARGET_ILP32.
	(ADDR_VEC_ALIGN): Make it depends on CASE_VECTOR_MODE.

2012-03-26  Steven Bosscher  <steven@gcc.gnu.org>

	* varasm.c (assemble_external): #if 0 out the new assert from the
	previous commit, it breaks the Java and Go front ends.

2012-03-26  Steven Bosscher  <steven@gcc.gnu.org>

	* toplev.c (check_global_declaration_1): Do not call assemble_external.
	* expr.c (emit_block_move_libcall_fn): Likewise.
	(clear_storage_libcall_fn): Likewise.
	(expand_expr_addr_expr_1): Likewise.
	(expand_expr_real_1): Likewise.
	* calls.c (rtx_for_function_call): Likewise.

	* varasm.c (assemble_external): Assert this function is only called
	during or after expanding to RTL.

2012-03-26  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/50052
	* tree-sra.c (tree_non_aligned_mem_p): Removed.
	(tree_non_aligned_mem_for_access_p): Likewise.
	(build_accesses_from_assign): Removed strict alignment requirements
	checks.
	(access_precludes_ipa_sra_p): Likewise.

2012-03-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52701
	* tree-vect-loop.c (vect_analyze_scalar_cycles_1): Always
	compute and set the evolution part of PHI nodes.

2012-03-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52721
	* tree-vect-stmts.c (vect_init_vector): Handle scalars.

2012-03-26  Ulrich Weigand  <ulrich.weigand@linaro.org>

	PR tree-optimization/52686