@@ -1,3 +1,8 @@
+2012-03-27  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/52720
+	* gcc.dg/torture/pr52720.c: New testcase.
+
 2012-03-27  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/pack17.adb: New test.
